@@ -29,13 +29,13 @@ package org.hisp.dhis.tracker.imports.config;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.hisp.dhis.tracker.imports.preheat.supplier.ClassBasedSupplier;
+import org.hisp.dhis.tracker.imports.preheat.supplier.CurrentUserSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.DefaultsSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.DuplicateRelationshipSupplier;
-import org.hisp.dhis.tracker.imports.preheat.supplier.EnrollmentSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.EnrollmentsWithAtLeastOneEventSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.EventCategoryOptionComboSupplier;
+import org.hisp.dhis.tracker.imports.preheat.supplier.EventProgramEnrollmentSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.EventProgramStageMapSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.FileResourceSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.OrgUnitValueTypeSupplier;
@@ -58,13 +58,14 @@ public class TrackerPreheatConfig {
           ClassBasedSupplier.class,
           DefaultsSupplier.class,
           TrackedEntityEnrollmentSupplier.class,
-          EnrollmentSupplier.class,
+          EventProgramEnrollmentSupplier.class,
           EnrollmentsWithAtLeastOneEventSupplier.class,
           EventProgramStageMapSupplier.class,
           ProgramOrgUnitsSupplier.class,
           ProgramOwnerSupplier.class,
           PeriodTypeSupplier.class,
           UniqueAttributesSupplier.class,
+          CurrentUserSupplier.class,
           UserSupplier.class,
           UsernameValueTypeSupplier.class,
           FileResourceSupplier.class,
@@ -74,7 +75,7 @@ public class TrackerPreheatConfig {
 
   @Bean("preheatOrder")
   public List<String> getPreheatOrder() {
-    return preheatOrder.stream().map(Class::getSimpleName).collect(Collectors.toList());
+    return preheatOrder.stream().map(Class::getSimpleName).toList();
   }
 
   @Bean("preheatStrategies")
