@@ -30,11 +30,11 @@ package org.hisp.dhis.tracker.export.trackedentity;
 import static java.util.Collections.emptySet;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hisp.dhis.DhisConvenienceTest.getDate;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.ACCESSIBLE;
+import static org.hisp.dhis.test.TestBase.getDate;
+import static org.hisp.dhis.test.utils.Assertions.assertContainsOnly;
+import static org.hisp.dhis.test.utils.Assertions.assertStartsWith;
 import static org.hisp.dhis.util.DateUtils.parseDate;
-import static org.hisp.dhis.utils.Assertions.assertContainsOnly;
-import static org.hisp.dhis.utils.Assertions.assertStartsWith;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -47,7 +47,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.hisp.dhis.common.AssignedUserQueryParam;
 import org.hisp.dhis.common.AssignedUserSelectionMode;
 import org.hisp.dhis.common.BaseIdentifiableObject;
@@ -75,6 +74,7 @@ import org.hisp.dhis.trackedentity.TrackedEntityTypeService;
 import org.hisp.dhis.tracker.export.OperationsParamsValidator;
 import org.hisp.dhis.tracker.export.Order;
 import org.hisp.dhis.user.User;
+import org.hisp.dhis.user.UserDetails;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -88,19 +88,19 @@ import org.mockito.quality.Strictness;
 @MockitoSettings(strictness = Strictness.LENIENT) // common setup
 @ExtendWith(MockitoExtension.class)
 class TrackedEntityOperationParamsMapperTest {
-  public static final String TEA_1_UID = "TvjwTPToKHO";
+  public static final UID TEA_1_UID = UID.of("TvjwTPToKHO");
 
-  public static final String TEA_2_UID = "cy2oRh2sNr6";
+  public static final UID TEA_2_UID = UID.of("cy2oRh2sNr6");
 
-  private static final String ORG_UNIT_1_UID = "lW0T2U7gZUi";
+  private static final UID ORG_UNIT_1_UID = UID.of("lW0T2U7gZUi");
 
-  private static final String ORG_UNIT_2_UID = "TK4KA0IIWqa";
+  private static final UID ORG_UNIT_2_UID = UID.of("TK4KA0IIWqa");
 
-  private static final String PROGRAM_UID = "XhBYIraw7sv";
+  private static final UID PROGRAM_UID = UID.of("XhBYIraw7sv");
 
-  private static final String PROGRAM_STAGE_UID = "RpCr2u2pFqw";
+  private static final UID PROGRAM_STAGE_UID = UID.of("RpCr2u2pFqw");
 
-  private static final String TRACKED_ENTITY_TYPE_UID = "Dp8baZYrLtr";
+  private static final UID TRACKED_ENTITY_TYPE_UID = UID.of("Dp8baZYrLtr");
 
   @Mock private OrganisationUnitService organisationUnitService;
 
@@ -118,7 +118,7 @@ class TrackedEntityOperationParamsMapperTest {
 
   @InjectMocks private TrackedEntityOperationParamsMapper mapper;
 
-  private User user;
+  private UserDetails user;
 
   private Program program;
 
@@ -132,63 +132,65 @@ class TrackedEntityOperationParamsMapperTest {
 
   @BeforeEach
   public void setUp() {
-    orgUnit1 = new OrganisationUnit("orgUnit1");
-    orgUnit1.setUid(ORG_UNIT_1_UID);
-    orgUnit2 = new OrganisationUnit("orgUnit2");
-    orgUnit2.setUid(ORG_UNIT_2_UID);
-    user = new User();
-    user.setOrganisationUnits(Set.of(orgUnit1, orgUnit2));
 
-    //    when(getCurrentUser()).thenReturn(user);
+    orgUnit1 = new OrganisationUnit("orgUnit1");
+    orgUnit1.setUid(ORG_UNIT_1_UID.getValue());
+    orgUnit2 = new OrganisationUnit("orgUnit2");
+    orgUnit2.setUid(ORG_UNIT_2_UID.getValue());
+    User testUser = new User();
+    testUser.setUid(CodeGenerator.generateUid());
+    testUser.setOrganisationUnits(Set.of(orgUnit1, orgUnit2));
+    user = UserDetails.fromUser(testUser);
 
     when(organisationUnitService.getOrganisationUnit(orgUnit1.getUid())).thenReturn(orgUnit1);
     when(organisationUnitService.isInUserHierarchy(
-            orgUnit1.getUid(), user.getTeiSearchOrganisationUnitsWithFallback()))
+            orgUnit1.getUid(), testUser.getEffectiveSearchOrganisationUnits()))
         .thenReturn(true);
     when(organisationUnitService.getOrganisationUnit(orgUnit2.getUid())).thenReturn(orgUnit2);
     when(organisationUnitService.isInUserHierarchy(
-            orgUnit2.getUid(), user.getTeiSearchOrganisationUnitsWithFallback()))
+            orgUnit2.getUid(), testUser.getEffectiveSearchOrganisationUnits()))
         .thenReturn(true);
 
     trackedEntityType = new TrackedEntityType();
-    trackedEntityType.setUid(TRACKED_ENTITY_TYPE_UID);
-    when(trackedEntityTypeService.getTrackedEntityType(TRACKED_ENTITY_TYPE_UID))
+    trackedEntityType.setUid(TRACKED_ENTITY_TYPE_UID.getValue());
+    when(trackedEntityTypeService.getTrackedEntityType(TRACKED_ENTITY_TYPE_UID.getValue()))
         .thenReturn(trackedEntityType);
 
     program = new Program();
-    program.setUid(PROGRAM_UID);
+    program.setUid(PROGRAM_UID.getValue());
     program.setTrackedEntityType(trackedEntityType);
     programStage = new ProgramStage();
-    programStage.setUid(PROGRAM_STAGE_UID);
+    programStage.setUid(PROGRAM_STAGE_UID.getValue());
     programStage.setProgram(program);
     program.setProgramStages(Set.of(programStage));
 
-    when(programService.getProgram(PROGRAM_UID)).thenReturn(program);
+    when(programService.getProgram(PROGRAM_UID.getValue())).thenReturn(program);
     when(aclService.canDataRead(user, program.getTrackedEntityType())).thenReturn(true);
 
     TrackedEntityAttribute tea1 = new TrackedEntityAttribute();
-    tea1.setUid(TEA_1_UID);
+    tea1.setUid(TEA_1_UID.getValue());
 
     TrackedEntityAttribute tea2 = new TrackedEntityAttribute();
-    tea2.setUid(TEA_2_UID);
+    tea2.setUid(TEA_2_UID.getValue());
 
-    when(attributeService.getTrackedEntityAttribute(TEA_1_UID)).thenReturn(tea1);
-    when(attributeService.getTrackedEntityAttribute(TEA_2_UID)).thenReturn(tea2);
+    when(attributeService.getTrackedEntityAttribute(TEA_1_UID.getValue())).thenReturn(tea1);
+    when(attributeService.getTrackedEntityAttribute(TEA_2_UID.getValue())).thenReturn(tea2);
   }
 
   @Test
   void testMapping() throws BadRequestException, ForbiddenException {
-    when(aclService.canDataRead(user, trackedEntityType)).thenReturn(true);
-    when(paramsValidator.validateTrackedEntityType(trackedEntityType.getUid(), user))
+    when(aclService.canDataRead(any(UserDetails.class), any(TrackedEntityType.class)))
+        .thenReturn(true);
+    when(paramsValidator.validateTrackedEntityType(UID.of(trackedEntityType), user))
         .thenReturn(trackedEntityType);
     when(trackedEntityTypeService.getAllTrackedEntityType()).thenReturn(List.of(trackedEntityType));
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
             .assignedUserQueryParam(
-                new AssignedUserQueryParam(AssignedUserSelectionMode.CURRENT, user, null))
+                new AssignedUserQueryParam(
+                    AssignedUserSelectionMode.CURRENT, null, UID.of(user.getUid())))
             .orgUnitMode(OrganisationUnitSelectionMode.DESCENDANTS)
             .enrollmentStatus(EnrollmentStatus.ACTIVE)
             .followUp(true)
@@ -197,14 +199,14 @@ class TrackedEntityOperationParamsMapperTest {
             .lastUpdatedDuration("20")
             .programEnrollmentStartDate(getDate(2019, 5, 5))
             .programEnrollmentEndDate(getDate(2020, 5, 5))
-            .trackedEntityTypeUid(TRACKED_ENTITY_TYPE_UID)
+            .trackedEntityType(TRACKED_ENTITY_TYPE_UID)
             .eventStatus(EventStatus.COMPLETED)
             .eventStartDate(getDate(2019, 7, 7))
             .eventEndDate(getDate(2020, 7, 7))
             .includeDeleted(true)
             .build();
 
-    final TrackedEntityQueryParams params = mapper.map(operationParams);
+    final TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     assertThat(params.getTrackedEntityType(), is(trackedEntityType));
     assertThat(params.getEnrollmentStatus(), is(EnrollmentStatus.ACTIVE));
@@ -227,37 +229,34 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void testMappingProgramEnrollmentStartDate() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     Date date = parseDate("2022-12-13");
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
             .programEnrollmentStartDate(date)
-            .programUid(program.getUid())
+            .program(program)
             .build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
-
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
     assertEquals(date, params.getProgramEnrollmentStartDate());
   }
 
   @Test
   void testMappingProgramEnrollmentEndDate() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     Date date = parseDate("2022-12-13");
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
             .programEnrollmentEndDate(date)
-            .programUid(program.getUid())
+            .program(program)
             .build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     assertEquals(date, params.getProgramEnrollmentEndDate());
   }
@@ -265,13 +264,12 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void testFilter() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(program.getUid())
+            .program(program)
             .filters(
                 Map.of(
                     TEA_1_UID,
@@ -280,15 +278,15 @@ class TrackedEntityOperationParamsMapperTest {
                     List.of(new QueryFilter(QueryOperator.LIKE, "foo"))))
             .build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     Map<TrackedEntityAttribute, List<QueryFilter>> items = params.getFilters();
     assertNotNull(items);
     // mapping to UIDs as the error message by just relying on QueryItem
     // equals() is not helpful
     assertContainsOnly(
-        List.of(TEA_1_UID, TEA_2_UID),
-        items.keySet().stream().map(BaseIdentifiableObject::getUid).collect(Collectors.toList()));
+        UID.toValueList(List.of(TEA_1_UID, TEA_2_UID)),
+        items.keySet().stream().map(BaseIdentifiableObject::getUid).toList());
 
     // QueryItem equals() does not take the QueryFilter into account so
     // assertContainsOnly alone does not ensure operators and filter value
@@ -296,7 +294,7 @@ class TrackedEntityOperationParamsMapperTest {
     // the following block is needed because of that
     // assertion is order independent as the order of QueryItems is not
     // guaranteed
-    Map<String, QueryFilter> expectedFilters =
+    Map<UID, QueryFilter> expectedFilters =
         Map.of(
             TEA_1_UID,
             new QueryFilter(QueryOperator.EQ, "2"),
@@ -309,25 +307,24 @@ class TrackedEntityOperationParamsMapperTest {
                     (Executable)
                         () -> {
                           String uid = i.getKey().getUid();
-                          QueryFilter expected = expectedFilters.get(uid);
+                          QueryFilter expected = expectedFilters.get(UID.of(uid));
                           assertEquals(
                               expected,
                               i.getValue().get(0),
                               () -> String.format("QueryFilter mismatch for TEA with UID %s", uid));
                         })
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   @Test
   void testFilterWhenTEAHasMultipleFilters() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(program.getUid())
+            .program(program)
             .filters(
                 Map.of(
                     TEA_1_UID,
@@ -336,15 +333,15 @@ class TrackedEntityOperationParamsMapperTest {
                         new QueryFilter(QueryOperator.LT, "20"))))
             .build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     Map<TrackedEntityAttribute, List<QueryFilter>> items = params.getFilters();
     assertNotNull(items);
     // mapping to UIDs as the error message by just relying on QueryItem
     // equals() is not helpful
     assertContainsOnly(
-        List.of(TEA_1_UID),
-        items.keySet().stream().map(BaseIdentifiableObject::getUid).collect(Collectors.toList()));
+        List.of(TEA_1_UID.getValue()),
+        items.keySet().stream().map(BaseIdentifiableObject::getUid).toList());
 
     // QueryItem equals() does not take the QueryFilter into account so
     // assertContainsOnly alone does not ensure operators and filter value
@@ -357,16 +354,12 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void testMappingProgram() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder()
-            .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(PROGRAM_UID)
-            .build();
+        TrackedEntityOperationParams.builder().orgUnitMode(ACCESSIBLE).program(PROGRAM_UID).build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     assertEquals(program, params.getProgram());
   }
@@ -374,17 +367,16 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void testMappingProgramStage() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(PROGRAM_UID)
-            .programStageUid(PROGRAM_STAGE_UID)
+            .program(PROGRAM_UID)
+            .programStage(PROGRAM_STAGE_UID)
             .build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     assertEquals(programStage, params.getProgramStage());
   }
@@ -392,10 +384,10 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void testMappingProgramStageGivenWithoutProgram() {
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder().programStageUid(PROGRAM_STAGE_UID).build();
+        TrackedEntityOperationParams.builder().programStage(PROGRAM_STAGE_UID).build();
 
     BadRequestException e =
-        assertThrows(BadRequestException.class, () -> mapper.map(operationParams));
+        assertThrows(BadRequestException.class, () -> mapper.map(operationParams, user));
     assertEquals(
         "Program does not contain the specified programStage: " + PROGRAM_STAGE_UID,
         e.getMessage());
@@ -404,10 +396,10 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void testMappingProgramStageNotFound() {
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder().programStageUid("NeU85luyD4w").build();
+        TrackedEntityOperationParams.builder().programStage(UID.of("NeU85luyD4w")).build();
 
     BadRequestException e =
-        assertThrows(BadRequestException.class, () -> mapper.map(operationParams));
+        assertThrows(BadRequestException.class, () -> mapper.map(operationParams, user));
     assertEquals(
         "Program does not contain the specified programStage: NeU85luyD4w", e.getMessage());
   }
@@ -415,22 +407,23 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void testMappingAssignedUsers() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(program.getUid())
+            .program(program)
             .assignedUserQueryParam(
                 new AssignedUserQueryParam(
-                    AssignedUserSelectionMode.PROVIDED, null, Set.of("IsdLBTOBzMi", "l5ab8q5skbB")))
+                    AssignedUserSelectionMode.PROVIDED,
+                    UID.of("IsdLBTOBzMi", "l5ab8q5skbB"),
+                    UID.of(user.getUid())))
             .build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     assertContainsOnly(
-        Set.of("IsdLBTOBzMi", "l5ab8q5skbB"),
+        UID.of("IsdLBTOBzMi", "l5ab8q5skbB"),
         params.getAssignedUserQueryParam().getAssignedUsers());
     assertEquals(AssignedUserSelectionMode.PROVIDED, params.getAssignedUserQueryParam().getMode());
   }
@@ -438,23 +431,22 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void shouldMapOrderInGivenOrder() throws BadRequestException, ForbiddenException {
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityAttribute tea1 = new TrackedEntityAttribute();
-    tea1.setUid(TEA_1_UID);
-    when(attributeService.getTrackedEntityAttribute(TEA_1_UID)).thenReturn(tea1);
+    tea1.setUid(TEA_1_UID.getValue());
+    when(attributeService.getTrackedEntityAttribute(TEA_1_UID.getValue())).thenReturn(tea1);
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(program.getUid())
+            .program(program)
             .orderBy("created", SortDirection.ASC)
-            .orderBy(UID.of(TEA_1_UID), SortDirection.ASC)
+            .orderBy(TEA_1_UID, SortDirection.ASC)
             .orderBy("createdAtClient", SortDirection.DESC)
             .build();
 
-    TrackedEntityQueryParams params = mapper.map(operationParams);
+    TrackedEntityQueryParams params = mapper.map(operationParams, user);
 
     assertEquals(
         List.of(
@@ -467,21 +459,20 @@ class TrackedEntityOperationParamsMapperTest {
   @Test
   void shouldFailToMapOrderIfUIDIsNotAnAttribute() throws ForbiddenException, BadRequestException {
     TrackedEntityAttribute tea1 = new TrackedEntityAttribute();
-    tea1.setUid(TEA_1_UID);
-    when(attributeService.getTrackedEntityAttribute(TEA_1_UID)).thenReturn(null);
+    tea1.setUid(TEA_1_UID.getValue());
+    when(attributeService.getTrackedEntityAttribute(TEA_1_UID.getValue())).thenReturn(null);
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .programUid(program.getUid())
-            .user(user)
-            .orderBy(UID.of(TEA_1_UID), SortDirection.ASC)
+            .program(program)
+            .orderBy(TEA_1_UID, SortDirection.ASC)
             .build();
 
     Exception exception =
-        assertThrows(BadRequestException.class, () -> mapper.map(operationParams));
+        assertThrows(BadRequestException.class, () -> mapper.map(operationParams, user));
     assertStartsWith("Cannot order by '" + TEA_1_UID, exception.getMessage());
   }
 
@@ -493,89 +484,98 @@ class TrackedEntityOperationParamsMapperTest {
     // invalid field names and UIDs. Such invalid order values will be caught in this mapper.
     assertTrue(CodeGenerator.isValidUid("lastUpdated"));
     when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), user)).thenReturn(program);
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ACCESSIBLE)
-            .user(user)
             .orderBy(UID.of("lastUpdated"), SortDirection.ASC)
-            .programUid(program.getUid())
+            .program(program)
             .build();
 
     Exception exception =
-        assertThrows(BadRequestException.class, () -> mapper.map(operationParams));
+        assertThrows(BadRequestException.class, () -> mapper.map(operationParams, user));
     assertStartsWith("Cannot order by 'lastUpdated'", exception.getMessage());
   }
 
   @Test
   void shouldFailWhenGlobalSearchAndNoAttributeSpecified()
       throws ForbiddenException, BadRequestException {
-    user.setTeiSearchOrganisationUnits(Set.of(orgUnit1, orgUnit2));
-    user.setOrganisationUnits(emptySet());
+    User userWithOrgUnits = new User();
+    userWithOrgUnits.setTeiSearchOrganisationUnits(Set.of(orgUnit1, orgUnit2));
+    userWithOrgUnits.setOrganisationUnits(emptySet());
+    UserDetails currentUserWithOrgUnits = UserDetails.fromUser(userWithOrgUnits);
 
-    when(aclService.canDataRead(user, program)).thenReturn(true);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(aclService.canDataRead(currentUserWithOrgUnits, program)).thenReturn(true);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), currentUserWithOrgUnits))
+        .thenReturn(program);
+    when(organisationUnitService.getOrganisationUnitsByUid(
+            Set.of(orgUnit1.getUid(), orgUnit2.getUid())))
+        .thenReturn(List.of(orgUnit1, orgUnit2));
 
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder()
-            .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(PROGRAM_UID)
-            .build();
+        TrackedEntityOperationParams.builder().orgUnitMode(ACCESSIBLE).program(PROGRAM_UID).build();
 
-    Exception IllegalQueryException =
-        assertThrows(IllegalQueryException.class, () -> mapper.map(operationParams));
+    Exception illegalQueryException =
+        assertThrows(
+            IllegalQueryException.class,
+            () -> mapper.map(operationParams, currentUserWithOrgUnits));
 
     assertEquals(
         "At least 1 attributes should be mentioned in the search criteria.",
-        IllegalQueryException.getMessage());
+        illegalQueryException.getMessage());
   }
 
   @Test
   void shouldFailWhenGlobalSearchAndMaxTeLimitReached()
       throws ForbiddenException, BadRequestException {
-    user.setTeiSearchOrganisationUnits(Set.of(orgUnit1, orgUnit2));
-    user.setOrganisationUnits(emptySet());
+    User userWithOrgUnits = new User();
+    userWithOrgUnits.setTeiSearchOrganisationUnits(Set.of(orgUnit1, orgUnit2));
+    userWithOrgUnits.setOrganisationUnits(emptySet());
+    UserDetails currentUserWithOrgUnits = UserDetails.fromUser(userWithOrgUnits);
 
-    when(aclService.canDataRead(user, program)).thenReturn(true);
+    when(aclService.canDataRead(any(UserDetails.class), any(Program.class))).thenReturn(true);
     program.setMinAttributesRequiredToSearch(0);
     program.setMaxTeiCountToReturn(1);
-    when(programService.getProgram(PROGRAM_UID)).thenReturn(program);
-    when(paramsValidator.validateTrackerProgram(program.getUid(), user)).thenReturn(program);
+    when(programService.getProgram(PROGRAM_UID.getValue())).thenReturn(program);
+    when(paramsValidator.validateTrackerProgram(UID.of(program), currentUserWithOrgUnits))
+        .thenReturn(program);
 
     when(trackedEntityStore.getTrackedEntityCountWithMaxTrackedEntityLimit(any())).thenReturn(100);
+    when(organisationUnitService.getOrganisationUnitsByUid(
+            Set.of(orgUnit1.getUid(), orgUnit2.getUid())))
+        .thenReturn(List.of(orgUnit1, orgUnit2));
 
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder()
-            .orgUnitMode(ACCESSIBLE)
-            .user(user)
-            .programUid(PROGRAM_UID)
-            .build();
+        TrackedEntityOperationParams.builder().orgUnitMode(ACCESSIBLE).program(PROGRAM_UID).build();
 
-    Exception IllegalQueryException =
-        assertThrows(IllegalQueryException.class, () -> mapper.map(operationParams));
-
-    assertEquals("maxteicountreached", IllegalQueryException.getMessage());
+    Exception illegalQueryException =
+        assertThrows(
+            IllegalQueryException.class,
+            () -> mapper.map(operationParams, currentUserWithOrgUnits));
+    assertEquals("maxteicountreached", illegalQueryException.getMessage());
   }
 
   @Test
   void shouldFailWhenUserHasNoAccessToAnyTrackedEntityType() {
-    user.setTeiSearchOrganisationUnits(Set.of(orgUnit1, orgUnit2));
-    user.setOrganisationUnits(emptySet());
-    when(aclService.canDataRead(user, program)).thenReturn(true);
+    User userWithOrgUnits = new User();
+    userWithOrgUnits.setTeiSearchOrganisationUnits(Set.of(orgUnit1, orgUnit2));
+    userWithOrgUnits.setOrganisationUnits(emptySet());
+    UserDetails currentUserWithOrgUnits = UserDetails.fromUser(userWithOrgUnits);
+    when(aclService.canDataRead(currentUserWithOrgUnits, program)).thenReturn(true);
     program.setMinAttributesRequiredToSearch(0);
     program.setMaxTeiCountToReturn(1);
-    when(programService.getProgram(PROGRAM_UID)).thenReturn(program);
+    when(programService.getProgram(PROGRAM_UID.getValue())).thenReturn(program);
 
     when(trackedEntityStore.getTrackedEntityCountWithMaxTrackedEntityLimit(any())).thenReturn(100);
 
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder().orgUnitMode(ACCESSIBLE).user(user).build();
+        TrackedEntityOperationParams.builder().orgUnitMode(ACCESSIBLE).build();
 
-    Exception BadRequestException =
-        assertThrows(BadRequestException.class, () -> mapper.map(operationParams));
+    Exception badRequestException =
+        assertThrows(
+            BadRequestException.class, () -> mapper.map(operationParams, currentUserWithOrgUnits));
 
-    assertEquals("User has no access to any Tracked Entity Type", BadRequestException.getMessage());
+    assertEquals("User has no access to any Tracked Entity Type", badRequestException.getMessage());
   }
 }
